--- a/styles/post.css
+++ b/styles/post.css
@@ -44,7 +44,10 @@ i{
     background-color: white;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 5px;
-    border-color: grey;
-    border-style: solid;
+    
+    
+}
+#allComments{
+    background-color: grey;
+    padding: 10px;
 }
